Maintenance: Leverage Spring Boot 3.5 features (#1139)